--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -41,11 +41,9 @@ FIXTURES_SETUP scalapack_fxt)
 # --- MUMPS
 add_executable(test_mumps test_mumps.f90)
 target_link_libraries(test_mumps PRIVATE mumps_interface
-  MUMPS::MUMPS SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
-if(MUMPS_HAVE_Scotch)
-  target_link_libraries(test_mumps PRIVATE Scotch::Scotch)
-  target_link_libraries(test_mumps PRIVATE METIS::METIS)
-endif()
+MUMPS::MUMPS SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran
+"$<$<BOOL:${MUMPS_HAVE_Scotch}>:Scotch::Scotch;METIS::METIS>"
+)
 # same link logic applied to gemini.bin
 
 add_test(NAME unit:mumps_basic
