--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -4,15 +4,17 @@ target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj i
 hwm_ifc msis_ifc
 timeutils
 h5fortran::h5fortran
-MPI::MPI_Fortran)
+MPI::MPI_Fortran
+)
 
 # self-tests
 add_executable(test_proj test_proj.f90
-  $<TARGET_OBJECTS:newton> $<TARGET_OBJECTS:spherical> $<TARGET_OBJECTS:geomagnetic>
-  $<TARGET_OBJECTS:meshobj> $<TARGET_OBJECTS:meshobj_cart> $<TARGET_OBJECTS:meshobj_dipole>
-  $<TARGET_OBJECTS:grid> $<TARGET_OBJECTS:autogrid>
-  $<TARGET_OBJECTS:neutral> $<TARGET_OBJECTS:interp>
+$<TARGET_OBJECTS:newton> $<TARGET_OBJECTS:spherical> $<TARGET_OBJECTS:geomagnetic>
+$<TARGET_OBJECTS:meshobj> $<TARGET_OBJECTS:meshobj_cart> $<TARGET_OBJECTS:meshobj_dipole>
+$<TARGET_OBJECTS:grid> $<TARGET_OBJECTS:autogrid>
+$<TARGET_OBJECTS:neutral> $<TARGET_OBJECTS:interp>
 )
 target_include_directories(test_proj PRIVATE ${PROJECT_BINARY_DIR}/include)
 target_link_libraries(test_proj PRIVATE config const reader
-hwm_ifc msis_ifc timeutils pathlib mpimod const MPI::MPI_Fortran)
+hwm_ifc msis_ifc timeutils pathlib mpimod const MPI::MPI_Fortran
+)
