--- a/src/utils/hwloc/CMakeLists.txt
+++ b/src/utils/hwloc/CMakeLists.txt
@@ -2,11 +2,11 @@
 # https://gitlab.kitware.com/search?group_id=415&project_id=541&repository_ref=master&scope=blobs&search=GetNumberOfPhysicalCPU&snippets=false
 # without hwloc, hyperthreading may give incorrect result
 
-add_library(hwloc_ifc hwloc_ifc.f90)
+add_library(hwloc_ifc OBJECT hwloc_ifc.f90)
 target_link_libraries(hwloc_ifc PRIVATE hwloc_c)
 
 # separate C lib to avoid compiler warnings from C <-> Fortran add_compile_options etc.
-add_library(hwloc_c)
+add_library(hwloc_c OBJECT)
 
 install(TARGETS hwloc_ifc hwloc_c
 EXPORT ${PROJECT_NAME}-targets
