--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(neutral OBJECT neutral.f90 atmos.f90 interp.f90 perturb.f90 proj.f90 wind.f90)
 target_compile_options(neutral PRIVATE ${gfortran_opts})
-target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp mpimod
-hwm_ifc msis_ifc
-timeutils
+target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp mpimod timeutils
+hwm_ifc
+msis_ifc
 h5fortran::h5fortran
 MPI::MPI_Fortran
 )
@@ -16,5 +16,8 @@ $<TARGET_OBJECTS:neutral> $<TARGET_OBJECTS:interp>
 )
 target_include_directories(test_proj PRIVATE ${PROJECT_BINARY_DIR}/include)
 target_link_libraries(test_proj PRIVATE config const reader
-hwm_ifc msis_ifc timeutils pathlib mpimod const MPI::MPI_Fortran
+timeutils pathlib mpimod const
+hwm_ifc
+msis_ifc
+MPI::MPI_Fortran
 )
