--- a/src/numerical/potential/CMakeLists.txt
+++ b/src/numerical/potential/CMakeLists.txt
@@ -14,7 +14,9 @@ add_library(potential OBJECT
 potential_comm_mumps.f90 potential_root.f90 potential_worker.f90
 potential_mumps.f90 potential2d.f90
 boundary_conditions/potentialBCs_mumps.f90)
-target_link_libraries(potential PRIVATE PDEelliptic calculus collision grid meshobj interp timeutils mpimod reader const MPI::MPI_Fortran)
+target_link_libraries(potential PRIVATE PDEelliptic calculus collision grid meshobj interp timeutils mpimod reader const
+MPI::MPI_Fortran
+)
 
 
 if(NOT (hdf5 AND BUILD_TESTING))
@@ -27,7 +29,8 @@ add_executable(test_potential2d test_potential2D.f90 $<TARGET_OBJECTS:PDEellipti
 set_target_properties(test_potential2d PROPERTIES LABELS "unit")
 target_link_libraries(test_potential2d PRIVATE const h5fortran::h5fortran MUMPS::MUMPS
 $<$<BOOL:${mpi}>:SCALAPACK::SCALAPACK>
-LAPACK::LAPACK MPI::MPI_Fortran
+LAPACK::LAPACK
+MPI::MPI_Fortran
 $<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
 "$<$<BOOL:${MUMPS_HAVE_Scotch}>:Scotch::Scotch;METIS::METIS>"
 )
