--- a/src/numerical/grid/CMakeLists.txt
+++ b/src/numerical/grid/CMakeLists.txt
@@ -3,4 +3,5 @@ readgrid_hdf5.f90 readgrid_nc4.f90 readgrid_raw.f90)
 target_compile_options(grid PRIVATE ${gfortran_opts})
 target_link_libraries(grid PRIVATE const reader meshobj meshobj_cart meshobj_dipole mpimod
 h5fortran::h5fortran nc4fortran::nc4fortran
-MPI::MPI_Fortran)
+$<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
+)
