--- a/src/mpimod/CMakeLists.txt
+++ b/src/mpimod/CMakeLists.txt
@@ -9,9 +9,10 @@ endif()
 configure_file(mpimod.in.f90 mpimod.f90 @ONLY)
 
 add_library(mpimod OBJECT
-  ${CMAKE_CURRENT_BINARY_DIR}/mpimod.f90
-  $<TARGET_OBJECTS:autogrid>
-  mpisend.f90 mpirecv.f90 mpihalo.f90)
+${CMAKE_CURRENT_BINARY_DIR}/mpimod.f90
+$<TARGET_OBJECTS:autogrid>
+mpisend.f90 mpirecv.f90 mpihalo.f90
+)
 target_link_libraries(mpimod PRIVATE const
 MPI::MPI_Fortran
 $<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
@@ -26,9 +27,9 @@ add_executable(test_excess_mpi test_excess_mpi.f90)
 target_link_libraries(test_excess_mpi PRIVATE autogrid)
 set_target_properties(test_excess_mpi PROPERTIES LABELS unit)
 
-add_test(NAME unit:mpi:excessCPU COMMAND $<TARGET_FILE:test_excess_mpi>)
+add_test(NAME unit:mpi:excessCPU COMMAND test_excess_mpi)
 set_tests_properties(unit:mpi:excessCPU PROPERTIES
-  TIMEOUT 10
-  LABELS unit)
-
+TIMEOUT 10
+LABELS unit
+)
 endif()
