--- a/src/numerical/calculus/CMakeLists.txt
+++ b/src/numerical/calculus/CMakeLists.txt
@@ -1,4 +1,5 @@
 configure_file(calculus.in.f90 calculus.f90 @ONLY)
 add_library(calculus OBJECT
-  ${CMAKE_CURRENT_BINARY_DIR}/calculus.f90 gradient.f90 integral.f90 div.f90)
+${CMAKE_CURRENT_BINARY_DIR}/calculus.f90 gradient.f90 integral.f90 div.f90
+)
 target_link_libraries(calculus PRIVATE meshobj)
