--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -13,13 +13,15 @@ add_executable(test_mpi test_mpi.f90)
 target_link_libraries(test_mpi PRIVATE MPI::MPI_Fortran)
 
 add_test(NAME unit:mpi_basic
-COMMAND COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_FILE:test_mpi> ${Ncpu})
+COMMAND COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_FILE:test_mpi> ${Ncpu}
+)
 
 set_tests_properties(unit:mpi_basic PROPERTIES
 TIMEOUT 15
 PROCESSORS ${Ncpu}
 FIXTURES_SETUP mpi_fxt
-RESOURCE_LOCK cpu_mpi)
+RESOURCE_LOCK cpu_mpi
+)
 
 # --- SCALAPACK
 
@@ -36,7 +38,8 @@ add_test(NAME unit:scalapack COMMAND $<TARGET_FILE:gemini_scalapack>)
 set_tests_properties(unit:scalapack PROPERTIES
 TIMEOUT 15
 FIXTURES_REQUIRED mpi_fxt
-FIXTURES_SETUP scalapack_fxt)
+FIXTURES_SETUP scalapack_fxt
+)
 
 # --- MUMPS
 add_executable(test_mumps test_mumps.f90)
@@ -48,7 +51,8 @@ MUMPS::MUMPS SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran
 
 add_test(NAME unit:mumps_basic
 COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:test_mumps>
-WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+)
 
 set_tests_properties(unit:mumps_basic PROPERTIES
 TIMEOUT 15
@@ -56,4 +60,5 @@ PROCESSORS 2
 RESOURCE_LOCK cpu_mpi
 REQUIRED_FILES ${CMAKE_CURRENT_SOURCE_DIR}/input_simpletest_real.nml
 FIXTURES_REQUIRED scalapack_fxt
-FIXTURES_SETUP mumps_fxt)
+FIXTURES_SETUP mumps_fxt
+)
