--- a/src/utils/hwloc/CMakeLists.txt
+++ b/src/utils/hwloc/CMakeLists.txt
@@ -26,10 +26,11 @@ if(HWLOC_FOUND)
     # NOTE: MPIEXEC_MAX_NUMPROCS is fallible, it uses less robust methods than hwloc! Particularly on ARM (Raspberry Pi)
     add_test(NAME unit:HWLOC COMMAND $<TARGET_FILE:test_hwloc> ${Ncpu})
     set_tests_properties(unit:HWLOC PROPERTIES
-      FIXTURES_SETUP hwloc_fxt
-      TIMEOUT 10
-      PROCESSORS 1
-      LABELS unit)
+    FIXTURES_SETUP hwloc_fxt
+    TIMEOUT 10
+    PROCESSORS 1
+    LABELS unit
+    )
   endif()
 
   return()
