--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
       - "**.cmake"
       - "**/CMakeLists.txt"
       - "!cmake/compilers/intel.cmake"
+      - ".github/workflows/ci.yml"
 # paths ignore starting with "!"
       - "!docs/**"
 
